# educative-exampke

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: checksum.cpp  checksum.hpp  main.cpp  test.cpp
